--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-creation of index.html page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Colton's Static Page Test</title>
+</head>
+<body>
+this is a test of a static webpage with basic link. First time using Github pages, wooooo.
+    <p>Welcome to my static page!</p>
+
+    <!-- Link to your desired URL -->
+    <a href="">Go to myViz</a>
+</body>
+</html>
