--- a/myViz.html
+++ b/myViz.html
@@ -1,1 +1,11 @@
-creation of myViz.html.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Colton's MyViz Test!</title>
+</head>
+<body>
+myviz test woooooo
+
+</body>
+</html>
