--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 this is a test of a static webpage with basic link. First time using Github pages, wooooo.
     <p>Welcome to my static page!</p>
 
-    https://ckelsey95.github.io/my-webpage/myViz.html
-    <a href="">Go to myViz</a>
+    <a href="https://ckelsey95.github.io/my-webpage/myViz.html">Go to myViz</a>
 </body>
 </html>
