--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <title>Colton's Static Page Test</title>
 </head>
 <body>
-this is a test of a static webpage with basic link. First time using Github pages, wooooo.
-    <p>Welcome to my static page!</p>
 
-    <a https://ckelsey95.github.io/my-webpage/myViz.html>Go to myViz</a>
+        <p>Welcome to my static page!</p>
+this is a test of a static webpage with basic link. First time using Github pages, wooooo.
+
+<a href="https://ckelsey95.github.io/my-webpage/myViz.html" title="Visit myViz page">Go to myViz</a>
+
 </body>
 </html>
