--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Colton's Static Page Test</title>
 </head>
 <body>
+    <p>Welcome to my static page!</p>
 
-        <p>Welcome to my static page!</p>
-this is a test of a static webpage with basic link. First time using Github pages, wooooo.
+    This is a test of github pages, wooooo
 
-<a href="https://ckelsey95.github.io/my-webpage/myViz.html" title="Visit myViz page">Go to myViz</a>
-
+    <!-- Link to your desired URL -->
+    <a href="https://ckelsey95.github.io/my-webpage/myViz.html">Go to myViz</a>
 </body>
 </html>
