--- a/myViz.html
+++ b/myViz.html
@@ -83,10 +83,10 @@
     </ol>
 
     <h2>Links</h2>
-    <p>Visit the <a href="https://www.example.com" target="_blank">Example Website</a> for more information.</p>
+    <p>Visit the <a href="https://www.google.com" target="_blank">Example Website</a> for more information.</p>
 
     <h2>Images</h2>
-    <img src="https://via.placeholder.com/400x200" alt="Sample Image">
+    <img src="https://steamuserimages-a.akamaihd.net/ugc/397834442103557465/2D7B87D4C5E18AE8E109B44A2F87E35526FEAAF6/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false/400x200" alt="Sample Image">
 
     <h2>Tables</h2>
     <table>
