--- a/myViz.html
+++ b/myViz.html
@@ -86,7 +86,7 @@
     <p>Visit the <a href="https://www.google.com" target="_blank">Example Website</a> for more information.</p>
 
     <h2>Images</h2>
-    <img src="https://i.kym-cdn.com/entries/icons/original/000/042/690/Screen_Shot_2022-11-16_at_2.24.03_PM.jpg/400x200" alt="Sample Image">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Hobbit_Hole.gif/400x200" alt="Sample Image">
 
     <h2>Tables</h2>
     <table>
