--- a/myViz.html
+++ b/myViz.html
@@ -86,7 +86,7 @@
     <p>Visit the <a href="https://www.google.com" target="_blank">Example Website</a> for more information.</p>
 
     <h2>Images</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Hobbit_Hole.gif/400x200" alt="Sample Image">
+    <img src="<img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Hobbit_Hole.gif" alt="Sample Image" width="400" height="200">" alt="Sample Image">
 
     <h2>Tables</h2>
     <table>
