--- a/myViz.html
+++ b/myViz.html
@@ -130,12 +130,11 @@
         .text('Total Spending (in billions)');
 
 </script>
-
-Colton Kelsey 
-Lab 3.6
-
-I chose to use a bar chart to visualize the total spending for each year. I chose this because I’m very new to D3.js (and Javascript in general) and wanted to work on something simple before we get more complex in the future. The features I used are SVG elements (rectangles) to represent the bars, scales on the X axis for years and on the Y for totals. I also created axes for the bottom and left to label, and did some light customization so they would be more readable. I used an event listener as well to allow hovering on each bar. My challenges were definitely around Javascript as a whole, and I should probably spend more time on it for familiarity. 
-
-    
+<!-- Additional Note Section -->
+<div style="margin-top: 20px;">
+    <p><strong>Colton Kelsey</strong><br>
+    <strong>Lab 3.6</strong></p>
+    <p>I chose to use a bar chart to visualize the total spending for each year. I chose this because I’m very new to D3.js (and Javascript in general) and wanted to work on something simple before we get more complex in the future. The features I used are SVG elements (rectangles) to represent the bars, scales on the X axis for years and on the Y for totals. I also created axes for the bottom and left to label, and did some light customization so they would be more readable. I used an event listener as well to allow hovering on each bar. My challenges were definitely around Javascript as a whole, and I should probably spend more time on it for familiarity.</p>
+</div>   
 </body>
 </html>
