--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 
     <!-- Link to your desired URL -->
     <a href="https://ckelsey95.github.io/my-webpage/myViz.html">Go to myViz</a>
+
+    <a href="https://ckelsey95.github.io/my-webpage/Lab_4.1">Lab 4.1 Display</a>
+    
 </body>
 </html>
