--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Link to your desired URL -->
     <a href="https://ckelsey95.github.io/my-webpage/myViz.html">Go to myViz</a>
 
+    Click below to go to the Lab 4.1 Visualization
+
     <a href="https://ckelsey95.github.io/my-webpage/Lab_4.1">Lab 4.1 Display</a>
     
 </body>
