--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     Click below to go to the Lab 4.1 Visualization
 
-    <a href="https://ckelsey95.github.io/my-webpage/Lab_4.1">Lab 4.1 Display</a>
+    <a href="https://ckelsey95.github.io/my-webpage/Lab_4.1.html">Lab 4.1 Display</a>
     
 </body>
 </html>
