--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     Click below to go to the Lab 4.1 Visualization
 
     <a href="https://ckelsey95.github.io/my-webpage/Lab_4.1.html">Lab 4.1 Display</a>
+
+    Click Below to go to the Lab 4.2 Visualization
+
+    <a href="https://ckelsey95.github.io/my-webpage/Tableau_Data_Processing_Lab.html">Lab 4.2 Display</a>
     
 </body>
 </html>
