--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 <body>
     <p>Welcome to my static page!</p>
 
-    This is a test of github pages, wooooo
+    This is a test of github pages, wooooo <br>
 
     <!-- Link to your desired URL -->
-    <a href="https://ckelsey95.github.io/my-webpage/myViz.html">Go to myViz</a>
+    <a href="https://ckelsey95.github.io/my-webpage/myViz.html">Go to myViz</a> <br>
 
     Click below to go to the Lab 4.1 Visualization
 
-    <a href="https://ckelsey95.github.io/my-webpage/Lab_4.1.html">Lab 4.1 Display</a>
+    <a href="https://ckelsey95.github.io/my-webpage/Lab_4.1.html">Lab 4.1 Display</a> <br>
 
-    Click Below to go to the Lab 4.2 Visualization
+    Click Below to go to the Lab 4.2 Visualization <br>
 
-    <a href="https://ckelsey95.github.io/my-webpage/Tableau_Data_Processing_Lab.html">Lab 4.2 Display</a>
+    <a href="https://ckelsey95.github.io/my-webpage/Tableau_Data_Processing_Lab.html">Lab 4.2 Display</a> <br>
     
 </body>
 </html>
