--- a/Tableau_Data_Processing_Lab.html
+++ b/Tableau_Data_Processing_Lab.html
@@ -7,6 +7,10 @@
         <div class="photo-caption">The most visited countries are the Christmas Islands, Denmark, French Guiana, Georgia, Germany, Honduras, Mayotte, Oman, and Saint Halena.</div>
     </div>
 
+        <div class="photo-item">
+        <img src="Lab 4.1/Years of Employment.png" alt="Years of Employment">
+        <div class="photo-caption">Shows # of years since Entry, quick color coding.</div>
+    </div>
   
 </body>
 </html>
