--- a/Project2/rus_losses_linechart.html
+++ b/Project2/rus_losses_linechart.html
@@ -117,20 +117,20 @@
             });
 
             // adds the legend, very necessary for this many entries.
-            const legend = svg.selectAll(".legend")
+          const legend = svg.selectAll(".legend")
                               .data(equipmentTypes)
                               .enter()
                               .append("g")
                               .attr("transform", (d, i) => `translate(0,${i * 20})`);
 
             legend.append("rect")
-                  .attr("x", width + 40)
+                  .attr("x", width - 120)
                   .attr("width", 18)
                   .attr("height", 18)
                   .style("fill", d => colorScale(d));
 
             legend.append("text")
-                  .attr("x", width + 44)
+                  .attr("x", width - 124)
                   .attr("y", 9)
                   .attr("dy", ".35em")
                   .style("text-anchor", "end")
