--- a/Project2/rus_losses_linechart.html
+++ b/Project2/rus_losses_linechart.html
@@ -35,8 +35,8 @@
             });
 
             // Set dimensions of graph and adds some small margins
-            const margin = {top: 20, right: 30, bottom: 50, left: 50},
-                  width = 960 - margin.left - margin.right,
+            const margin = {top: 20, right: 150, bottom: 50, left: 70};
+                  width = 1080 - margin.left - margin.right,
                   height = 500 - margin.top - margin.bottom;
 
             // Append the SVG object to the body of the page
@@ -124,13 +124,13 @@
                               .attr("transform", (d, i) => `translate(0,${i * 20})`);
 
             legend.append("rect")
-                  .attr("x", width - 120)
+                  .attr("x", width + 20)
                   .attr("width", 18)
                   .attr("height", 18)
                   .style("fill", d => colorScale(d));
 
             legend.append("text")
-                  .attr("x", width - 124)
+                  .attr("x", width + 16)
                   .attr("y", 9)
                   .attr("dy", ".35em")
                   .style("text-anchor", "end")
