--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
    <br> Click Below to go to the Calculated Fields Tableu Visualization <br>
 
-    <a href="https://ckelsey95.github.io/my-webpage/CalcFields_Proj/WebTrends.html"> Tableu Cacl Fields Display</a> <br>
+    <a href="https://ckelsey95.github.io/my-webpage/CalcFields_Proj/WebTrends.html"> Tableu Calc Fields Display</a> <br>
     
 </body>
 </html>
