--- a/CalcFields_Proj/WebTrends.html
+++ b/CalcFields_Proj/WebTrends.html
@@ -17,7 +17,7 @@
             display: grid;
             grid-template-columns: repeat(2, 1fr); /* 2 columns layout */
             gap: 20px;
-            max-width: 800px;
+            max-width: 1000px;
             margin: 40px auto;
             padding: 20px;
             background-color: #ffffff;
@@ -33,7 +33,7 @@
         .photo-item img {
             width: 100%;
             height: auto;
-            max-height: 300px;
+            max-height: 500px;
             border-radius: 4px;
         }
 
@@ -47,7 +47,7 @@
 </head>
 <body>
 
-<h1 style="text-align: center; margin-top: 20px;">Photo Gallery</h1>
+<h1 style="text-align: center; margin-top: 20px;">WebTrends Photo Gallery</h1>
 
 <div class="gallery-container">
     <!-- Photo 1 -->
