--- a/CalcFields_Proj/WebTrends.html
+++ b/CalcFields_Proj/WebTrends.html
@@ -69,5 +69,10 @@
     </div>
 </div>
 
+    
+   <br> This is a Link to the Tableau Publication of the same Work! <br>
+
+    <a href="https://public.tableau.com/views/Ckelsey_CalculatedFields_Project/Sheet2?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"> Click Here</a> <br>
+
 </body>
 </html>
