--- a/Project2/rus_losses_linechart.html
+++ b/Project2/rus_losses_linechart.html
@@ -56,7 +56,7 @@
                         .domain([0, d3.max(data, d => d3.max(equipmentTypes, type => d[type]))])
                         .range([height, 0]);
 
-            // Add the X Axis
+            // Add the X Axis and label
             svg.append("g")
                .attr("transform", `translate(0,${height})`)
                .call(d3.axisBottom(x))
@@ -67,7 +67,7 @@
                .attr("text-anchor", "middle")
                .text("Date");
 
-            // Add the Y Axis
+            // Add the Y Axis and label
             svg.append("g")
                .call(d3.axisLeft(y))
                .append("text")
@@ -90,7 +90,7 @@
             // adds the tooltip
             const tooltip = d3.select(".tooltip");
 
-            // draws lines for each type of equipment added
+            // draws lines for each type of equipment added, implements colorscale and tooltip.
             equipmentTypes.forEach((type, index) => {
                 svg.append("path")
                    .datum(data)
@@ -122,7 +122,7 @@
                               .enter()
                               .append("g")
                               .attr("transform", (d, i) => `translate(0,${i * 20})`);
-
+            // provides coordinates for legend, took much troubleshooting to get in the proper place.
             legend.append("rect")
                   .attr("x", width + 100)
                   .attr("width", 18)
@@ -139,5 +139,16 @@
             console.error('Error loading the CSV file:', error);
         });
     </script>
+
+    	I chose this dataset because I wanted to explore using multiple columns in a new graph format that I have not used before, and the dataset is updated daily on Kaggle, so
+    	there is room in the future to use it in Tableau and auto-update through API. <br>
+   	 
+    	I chose a line graph as a clear choice when showing multiple values changing over time. I mainly used an SVG element in this visualization, but also included data loading,
+    	scaling on the axes, line generation, tooltips, color scaling, and finally a legend. <br>
+
+    	This project was full of challenges, choosing a dataset was difficult, and I wasn't certain if this subject type would be palatable enough for school work. I am not very good
+    	with Javascript and honestly, I really don't care for visualizations in it, and had to look up a framework for the line graph as well as syntax at every stage of the build.
+    	Just moving the legend around took quite a bit of effort, as it wanted to either be right in the middle of the graph, or when moved to the correct spot, would be cut off by the
+    	dimensions of the margin.
 </body>
 </html>
