--- a/Project2/rus_losses_linechart.html
+++ b/Project2/rus_losses_linechart.html
@@ -147,8 +147,9 @@
     	scaling on the axes, line generation, tooltips, color scaling, and finally a legend. <br>
 
     	This project was full of challenges, choosing a dataset was difficult, and I wasn't certain if this subject type would be palatable enough for school work. I am not very good
-    	with Javascript and honestly, I really don't care for visualizations in it, and had to look up a framework for the line graph as well as syntax at every stage of the build.
+    	with Javascript and honestly, I really don't care for visualizations in it, and had to look up a framework for the line graph as well as syntax at every stage of the build so there is probably
+        quite a bit of redudancy in this that I am not aware of.
     	Just moving the legend around took quite a bit of effort, as it wanted to either be right in the middle of the graph, or when moved to the correct spot, would be cut off by the
-    	dimensions of the margin.
+    	dimensions of the margin. <br>
 </body>
 </html>
