--- a/Project2/rus_losses_linechart.html
+++ b/Project2/rus_losses_linechart.html
@@ -152,4 +152,5 @@
     	Just moving the legend around took quite a bit of effort, as it wanted to either be right in the middle of the graph, or when moved to the correct spot, would be cut off by the
     	dimensions of the margin. <br>
 </body>
+    <a href="https://ckelsey95.github.io/my-webpage/"> Back to Main Page</a> <br>
 </html>
