--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
    <br> Click Below to go to the Calculated Fields Tableu Visualization <br>
 
     <a href="https://ckelsey95.github.io/my-webpage/CalcFields_Proj/WebTrends.html"> Tableu Calc Fields Display</a> <br>
+
+    
+   <br> Click Below to go to to Project 2 Story Visuzalizations<br>
+
+    <a href="https://ckelsey95.github.io/my-webpage/Project3/Project3.html"> Tableu Story Display</a> <br>
+
+
+
     
 </body>
 </html>
