--- a/Project3/Project3.html
+++ b/Project3/Project3.html
@@ -3,17 +3,17 @@
 
 <body>
     <div class="photo-item">
-        <img src="Project3/Story 1_1.png" alt="First Page of Story">
+        <img src="Story 1_1.png" alt="First Page of Story">
         <div class="photo-caption">There is a clear upward trend in overall equipment losses, indicating an acceleration of the conflict. Artillery and ground vehicles show continuous losses, while naval vessel losses remain minimal.</div>
     </div>
     <div class="photo-item">
-        <img src="Project3/Story 1_2.png" alt="Second Page of Story">
+        <img src="Story 1_2.png" alt="Second Page of Story">
         <div class="photo-caption">As tank losses approached nearly half of Russia's pre-war stockpile (estimated at 10,000 tanks), there was a noticeable increase in losses of APCs and unarmored vehicles. This suggests that Russia is substituting tanks with less advanced and cheaper vehicles due to diminishing tank reserves.
           Drone losses have escalated nearly exponentially, exceeding 18,000 reported losses. This trend indicates a significant investment in drone technology, reflecting a strategic pivot toward deploying inexpensive, disposable systems that can be mass-produced and replaced easily.
         Initial stages of the conflict saw substantial aircraft losses, with about two-thirds occurring in the first three months. Subsequently, Russia reduced the deployment of planes and helicopters, shifting to cruise missile strikes launched from within its own territory. This change suggests efforts to mitigate risks to valuable and hard-to-replace air assets.</div>
     </div>
       <div class="photo-item">
-        <img src="Project3/Story 1_3.png" alt="Third Page of Story">
+        <img src="Story 1_3.png" alt="Third Page of Story">
         <div class="photo-caption">The inflation rate spiked to 20% at the onset of the invasion, temporarily decreased due to government interventions, but has risen again to 20% as of the latest data. The Russian ruble has experienced significant devaluation. These economic indicators demonstrate the cumulative effect of international sanctions and the financial strain of prolonged military engagement.</div>
     </div>
 
